# mlp-pure-jax

./: .gitignore  README.md  pyproject.toml  train_jax.py  train_torch.py  utils.py
data/: .gitignore  download_mnist_as_csvs.py
