[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mlp-pure-jax"
version = "0.1.0"
description = ""
authors = ["jaymody <jaykmody@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
jax = {extras = ["cpu"], version = "^0.3.17"}

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.2"
isort = "^5.10.1"

[tool.poetry.group.train_torch.dependencies]
torch = "^1.12.1"

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = ["C", "R"]
generated-members = ["torch"]
